<resources>
    <string name="app_name">Tab Writer</string>

    <string name="title_app">APP</string>
    <string name="nav_home">Home</string>
    <string name="nav_record">Crea Tab</string>
    <string name="nav_list">Tab Recenti</string>
    <string name="title_altro">ALTRO</string>
    <string name="nav_settings">Impostazioni</string>
    <string name="nav_info">Info</string>

    <string name="connect_header">Connessione</string>
    <string name="ip_title">Host Name (o indirizzo IP)</string>
    <string name="port_title">Porta</string>

    <string name="info_text">Progetto finale per esame di Sistemi Digitali\nIng. Informatica Magistrale - UniBO 2021\nAlma Mater Studiorum\nGroup by: D. De Nardi, G. Tornatore</string>
</resources>