<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/title_app">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:title="@string/nav_home"
                android:icon="@drawable/ic_home" />
            <item
                android:id="@+id/nav_record"
                android:title="@string/nav_record"
                android:icon="@drawable/ic_mic" />
            <item
                android:id="@+id/nav_list"
                android:title="@string/nav_list"
                android:icon="@drawable/ic_audio_list" />
        </menu>
    </item>
    <item android:title="@string/title_altro">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:title="@string/nav_info"
                android:icon="@drawable/ic_info" />
        </menu>
    </item>
</menu>